Added log methods for commit and tree changes

--- a/BuildChangesetRetriever/BuildChangesetRetriever.csproj
+++ b/BuildChangesetRetriever/BuildChangesetRetriever.csproj
@@ -49,6 +49,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Extensions\Extensions.cs" />
     <Compile Include="Objects\ChangesetOperation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
